[package]
name = "intense-pomodoro"
version = "0.1.2"
edition = "2024"

authors = ["Max Gaspers Scott gaspersscottma@gmail.com"]
description = "A pomodoro timer for programmers"
license = "Apache-2.0"

readme = "README.md"
homepage = "https://github.com/max-gaspers-scott/pomoduro"
repository = "https://github.com/max-gaspers-scott/pomoduro"
documentation = "https://docs.rs/my_awesome_crate"

keywords = ["utility", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
[package.metadata.docs.rs]

[dependencies]
rodio = "0.22.2"
time = "0.3.53"
